@@ -637,4 +637,23 @@ protected:
     FootNoteParameter m_newParameter;
 };
 
+
+class KWChangeFootNoteLineSeparatorParametersCommand : public KNamedCommand
+{
+public:
+    KWChangeFootNoteLineSeparatorParametersCommand( const QString &name, SeparatorLinePos _oldValuePos, SeparatorLinePos _newValuePos, int _oldLength, int _newLength, KWDocument *_doc);
+
+    ~KWChangeFootNoteLineSeparatorParametersCommand() {}
+
+    virtual void execute();
+    virtual void unexecute();
+protected:
+    void changeLineSeparatorParameter( SeparatorLinePos _pos, int length);
+    KWDocument *m_doc;
+    SeparatorLinePos m_oldValuePos;
+    SeparatorLinePos m_newValuePos;
+    int m_oldLength;
+    int m_newLength;
+};
+
 #endif
